# project1

./: .gitignore  ASSUMPTIONS.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
configs/: hr_view.json
data/sample/: ats_profile.json  bad.json  candidates.csv  github_profile.json  recruiter_notes.txt  resume.txt
output/: canonical_profile.json  hr_view_profile.json  test.json
src/candidate_transformer/: __init__.py  __main__.py  cli.py  pipeline.py
src/candidate_transformer/ingest/: base.py  notes.py  resume.py  sources.py
src/candidate_transformer/merge/: merger.py
src/candidate_transformer/models/: __init__.py  canonical.py  config.py
src/candidate_transformer/normalize/: __init__.py  dates.py  location.py  phones.py  skills.py
src/candidate_transformer/project/: projector.py
tests/: test_pipeline.py
