[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "1.0.0"
description = "Multi-source candidate data transformer for Eightfold intern project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "phonenumbers>=8.13.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.scripts]
candidate-transform = "candidate_transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
